<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/faq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/sixteen_dp"
        android:text="@string/faq"
        android:textColor="@color/blue"
        android:textSize="@dimen/eighteen_sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/contact_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/sixteen_dp"
        android:text="@string/contact_support"
        android:textColor="@color/blue"
        android:textSize="@dimen/eighteen_sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/sixteen_dp"
        android:text="@string/help"
        android:textColor="@color/blue"
        android:textSize="@dimen/eighteen_sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />


    <!--YOU CAN REMOVE THESE BUTTONS IF IMPLEMENTING PURCHASES-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sku_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            android:background="@drawable/buy_now_button"
            android:gravity="center"
            android:paddingBottom="@dimen/eight_dp"
            android:paddingLeft="@dimen/twenty_four_dp"
            android:paddingRight="@dimen/twenty_four_dp"
            android:paddingTop="@dimen/eight_dp"
            android:text="SKU Details"
            android:textColor="@color/white"
            android:textSize="@dimen/fourteen_sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/query_purchases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            android:background="@drawable/buy_now_button"
            android:gravity="center"
            android:paddingBottom="@dimen/eight_dp"
            android:paddingLeft="@dimen/tweleve_dp"
            android:paddingRight="@dimen/ten_dp"
            android:paddingTop="@dimen/eight_dp"
            android:text="Query Purchases"
            android:textColor="@color/white"
            android:textSize="@dimen/fourteen_sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/query_purchases2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            android:background="@drawable/buy_now_button"
            android:gravity="center"
            android:paddingBottom="@dimen/eight_dp"
            android:paddingLeft="@dimen/tweleve_dp"
            android:paddingRight="@dimen/tweleve_dp"
            android:paddingTop="@dimen/eight_dp"
            android:text="Query Purchases 2"
            android:textColor="@color/white"
            android:textSize="@dimen/fourteen_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clear_logs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            android:background="@drawable/buy_now_button"
            android:gravity="center"
            android:paddingBottom="@dimen/eight_dp"
            android:paddingLeft="@dimen/tweleve_dp"
            android:paddingRight="@dimen/tweleve_dp"
            android:paddingTop="@dimen/eight_dp"
            android:text="@string/clear_logs"
            android:textColor="@color/white"
            android:textSize="@dimen/fourteen_sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:text="Logs:"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp" />

    <TextView
        android:id="@+id/logs_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dp"
        android:text="logs:"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp" />

</LinearLayout>