<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="InAppPurchaseActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/app_bar_in_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:elevation="@dimen/sixteen_dp"
        app:theme="@style/ThemeOverlay.AppCompat.Light" />

    <View
        android:id="@+id/shadowline_in_app"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/shadow" />

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout

                android:id="@+id/purchase_type_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:orientation="vertical"
                android:padding="@dimen/six_dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/purchase_type_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/eight_dp"
                    android:text="@string/purchase_type"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp" />

                <TextView
                    android:id="@+id/subscription_date_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/eight_dp"
                    android:text="@string/subscription_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/eight_dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/eight_dp"
                    android:text="@string/app_name"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/twenty_four_sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <include layout="@layout/yearly_purchase" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <include layout="@layout/six_month_package_layout" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <include layout="@layout/three_month_package_layout" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <include layout="@layout/monthly_package_layout" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <include layout="@layout/weekly_purchase" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <include layout="@layout/consumption_purchase" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />


            <include layout="@layout/extra_layout" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
